--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,5 +13,5 @@
     ~/.config/karabiner/karabiner.json: karabiner.json
 
 - shell:
-  - [cp hyperzsh.zsh-theme ~/.oh-my-zsh/custom/themes/hyperzsh.zsh-theme, Copying ITerm theme]
+  - [cp hyperzsh.zsh-theme ~/.oh-my-zsh/custom/themes/hyperzsh.zsh-theme, Copying ZSH theme]
   - [vim +PlugUpdate +PlugClean! +qa, Installing and updating Vim plugins]
