--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.gitconfig: gitconfig
     ~/.config/karabiner/karabiner.json: karabiner.json
     ~/.config/nvim: nvim
+    ~/.tmux.conf: tmux.conf
 
 - shell:
   - [cp hyperzsh.zsh-theme ~/.oh-my-zsh/custom/themes/hyperzsh.zsh-theme, Copying ZSH theme]
