Set tmux base-index to 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,3 +9,6 @@ set -g status-fg '#FFFFFF'
 set -g pane-active-border-style fg='yellow'
 
 set-option -g status-right ''
+
+set -g base-index 1
+setw -g pane-base-index 1
