feat(tmux): add new bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
-unbind C-b
-set -g prefix '\'
-bind '\' send-prefix
-
 set -g history-limit 10000
+
+set -s escape-time 0
+set -g display-time 2000
+set -g status-interval 5
 
 set -g status-bg '#1A1E22'
 set -g status-fg '#FFFFFF'
@@ -10,9 +10,29 @@ set -g pane-active-border-style fg='yellow'
 
 set-option -g status-right ''
 
+set-option -g mouse on
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 set -g base-index 1
 setw -g pane-base-index 1
-
-set-option -g mouse on
-
 set-option -g renumber-windows on
+
+bind "c" new-window -c "#{pane_current_path}"
+
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+bind -r K resize-pane -U 5
+bind -r J resize-pane -D 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
+bind "|" split-window -h -c "#{pane_current_path}"
+bind "-" split-window -v -c "#{pane_current_path}"
+
+bind -r "<" swap-window -d -t -1
+bind -r ">" swap-window -d -t +1
+
+bind R source-file ~/.tmux.conf \; display-message "source-file done"
