--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
     ~/.config/karabiner/karabiner.json: karabiner.json
     ~/.config/nvim: nvim
     ~/.tmux.conf: tmux.conf
+    ~/.wezterm.lua: wezterm.lua
 
 - shell:
   - [cp hyperzsh.zsh-theme ~/.oh-my-zsh/custom/themes/hyperzsh.zsh-theme, Copying ZSH theme]
