--- a/tmux.conf
+++ b/tmux.conf
@@ -19,10 +19,10 @@ set-option -g renumber-windows on
 
 bind "c" new-window -c "#{pane_current_path}"
 
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
 
 bind -r K resize-pane -U 5
 bind -r J resize-pane -D 5
