feat: update tmux colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ set -s escape-time 0
 set -g display-time 2000
 set -g status-interval 5
 
-set -g status-bg '#1A1E22'
-set -g status-fg '#FFFFFF'
+set -g status-style bg=default
+set -g status-fg 'white'
 set -g pane-active-border-style fg='yellow'
 
 set-option -g status-right ''
