chore: cleanup tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-option -g renumber-windows on
 
-bind "c" new-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 bind k select-pane -U
 bind j select-pane -D
@@ -29,10 +29,10 @@ bind -r J resize-pane -D 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-bind "|" split-window -h -c "#{pane_current_path}"
-bind "-" split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
-bind -r "<" swap-window -d -t -1
-bind -r ">" swap-window -d -t +1
+bind -r < swap-window -d -t -1
+bind -r > swap-window -d -t +1
 
 bind R source-file ~/.tmux.conf \; display-message "source-file done"
