feat: add sync-panes key

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,3 +36,4 @@ bind -r < swap-window -d -t -1
 bind -r > swap-window -d -t +1
 
 bind R source-file ~/.tmux.conf \; display-message "source-file done"
+bind S set-window-option synchronize-panes \; display-message "synchronize-panes is #{?synchronize-panes,on,off}"
