feat: set focus-event for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ set -g status-fg 'white'
 set -g pane-active-border-style fg='yellow'
 
 set-option -g status-right ''
+set-option -g focus-events on
 
 set-option -g mouse on
 unbind -T copy-mode-vi MouseDragEnd1Pane
