--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,9 @@ set-option -g status-right ''
 set-option -g focus-events on
 
 set-option -g mouse on
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind p paste-buffer
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
 set -g base-index 1
